...
        android:layout_height="24dp"
        android:background="@color/color_primary_dark"
        android:elevation="@dimen/card_elevation_small"
        android:outlineProvider="background"
        app:cardBackgroundColor="@color/placeholder_card_color_1"
        app:cardCornerRadius="@dimen/card_radius_small"
        app:layout_constraintBottom_toBottomOf="@+id/tv_spinner_color_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_spinner_color_name">

    </androidx.cardview.widget.CardView>

    <TextView
...
